Optimizing endpoints